--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,12 @@
     }],
     "require": {
         "php": ">=5.3.0",
-        "symfony/framework-bundle" : ">=2.0"
+        "symfony/framework-bundle" : ">=2.0",
+        "doctrine/cache": "~1.3"
     },
     "require-dev": {
-        "twig/extensions": "1.0.*"
+        "twig/extensions": "1.0.*",
+        "phpunit/phpunit": "4.3.*"
     },
     "suggest" : {
         "twig/twig" : ">=1.3.0"
