--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "php": ">=5.3.0",
         "symfony/framework-bundle" : ">=2.0",
-        "doctrine/cache": "~1.3"
+        "doctrine/cache": "~1.3",
+        "guzzlehttp/guzzle": "~4.0"
     },
     "require-dev": {
         "twig/extensions": "1.0.*",
