--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": ">=5.3.0",
         "symfony/framework-bundle" : ">=2.0",
         "doctrine/cache": "~1.3",
-        "guzzlehttp/guzzle": "~5.0"
+        "guzzlehttp/guzzle": ">=4.0"
     },
     "require-dev": {
         "twig/extensions": "1.0.*",
