--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     }],
     "require": {
         "php": ">=5.3.0",
-        "symfony/framework-bundle" : "~3.0|~2.0"
+        "symfony/framework-bundle" : "~3.0|~2.0|^4.0-BETA"
     },
     "require-dev": {
         "twig/extensions": "1.0.*",
@@ -38,4 +38,3 @@
         }
     }
 }
-
