--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ornicar/gravatar-bundle",
     "description": "This bundles provides a Gravatar API various utilities to work with it in templates",
-    "keywords": ["symfony2", "gravatar", "templating", "twig"],
+    "keywords": ["symfony", "gravatar", "templating", "twig"],
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [{
@@ -14,15 +14,18 @@
     }],
     "require": {
         "php": ">=5.3.0",
-        "symfony/framework-bundle" : "~4.0|~3.0|~2.3",
+        "symfony/expression-language": "^2.4|^3.0|^4.0",
+        "symfony/framework-bundle": "~4.0|~3.0|~2.4",
         "symfony/templating": "~4.0|~3.0|~2.0"
     },
     "require-dev": {
-        "twig/extensions": "1.0.*",
-        "symfony/phpunit-bridge": "~2.7"
+        "doctrine/doctrine-cache-bundle": "^1.3",
+        "symfony/phpunit-bridge": "~2.7",
+        "twig/extensions": "1.0.*"
     },
     "suggest" : {
-        "twig/twig" : "For gravatar twig extension usage"
+        "twig/twig": "For gravatar twig extension usage",
+        "doctrine/doctrine-cache-bundle": "To cache gravatar data"
     },
     "conflict": {
         "twig/twig": "<1.12"
@@ -39,4 +42,3 @@
         }
     }
 }
-
